Fix alt button color and spacing on welcome screen

--- a/client/src/stylesheets/WelcomeScreen.scss
+++ b/client/src/stylesheets/WelcomeScreen.scss
@@ -4,31 +4,31 @@
 
 .welcomeScreen {
   @extend .centeredColumn;
-  margin-bottom: 16vh;
+  margin-bottom: 5vh;
 }
 
 .enterRoomSection {
   @extend .centeredColumn;
-  margin-bottom: 30px;
+  margin-bottom: 2vh;
 }
 
 .enterRoomButton {
-  margin-top: 40px;
+  margin-top: 3vh;
 }
 
 .separator {
-  margin-bottom: 30px;
+  margin-bottom: 4vh;
   width: 100%;
 }
 
 .headerText {
   @extend .softText;
-  margin: 30px 0px;
-  font-size: 30px;
+  margin: 2vh 0px;
+  font-size: 3vh;
 }
 
 .singlePlayerButton {
-  margin-top: 5px;
+  margin-top: 2vh;
 }
 
 @media screen and (max-width: 400px) {
