--- a/client/src/stylesheets/globals.scss
+++ b/client/src/stylesheets/globals.scss
@@ -6,7 +6,7 @@ $dark-grey: #a6a6a6;
 $text-grey: #43464b;
 $dark-error: #a63232;
 $soft-error: #ff9494;
-$soft-blue: #24a0ed;
+$soft-blue: #84caf5;
 $dark-blue: #083d5e;
 
 @import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap);
